--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "source": "src/index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "parcel",
-    "build": "parcel build",
+    "start": "parcel src/index.html",
+    "build": "parcel build src/index.html",
     "predeploy": "rm -rf dist && parcel build src/index.html --no-source-maps --public-url https://github.com/ellentyyu/F2E_maskmap_parcel",
     "deploy": "gh-pages -d dist"
   },
