--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel src/index.html",
-    "build": "parcel build src/index.html",
+    "build": "parcel build src/index.html --no-minify",
     "predeploy": "rm -rf dist && parcel build src/index.html --no-source-maps --public-url https://github.com/ellentyyu/F2E_maskmap_parcel",
     "deploy": "gh-pages -d dist"
   },
